# dinoe

./: ANALYSIS.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
cli/: Cargo.toml
cli/src/: main.rs  onboard.rs  repl.rs  skills.rs  templates.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/agent/: context.rs  loop_.rs  mod.rs  registry.rs  status.rs
core/src/agent/runner/: detection.rs  execution.rs  history.rs  mod.rs
core/src/agent/runner/parsing/: formats.rs  helpers.rs  mod.rs  normalize.rs
core/src/config/: mod.rs
core/src/memory/: factory.rs  markdown.rs  mod.rs
core/src/providers/: factory.rs  glm.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
core/src/skills/: manifest.rs  mod.rs  registry.rs
core/src/tools/: content_search.rs  file_edit.rs  file_read.rs  file_write.rs  git_operations.rs  glob_search.rs  http_request.rs  memory_read.rs  memory_write.rs  mod.rs  security.rs  shell.rs  web_fetch.rs
core/src/traits/: memory.rs  mod.rs  provider.rs  tool.rs
