[workspace]
resolver = "3"
members = ["cli", "core"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.0" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
