[workspace]
resolver = "3"
members = ["cli", "core"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.0" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "0.17"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "blocking"], default-features = false }

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
