[package]
name = "dinoe-cli"
version = "0.2.1"
edition.workspace = true

[[bin]]
name = "dinoe"
path = "src/main.rs"

[dependencies]
dinoe-core = { path = "../core" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = { workspace = true }
dialoguer = "0.11"
console = "0.15"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "5.0"
