[package]
name = "dinoe-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dinoe"
path = "src/main.rs"

[dependencies]
dinoe-core = { path = "../core" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = { workspace = true }
dialoguer = "0.11"
console = "0.15"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "5.0"
rustyline = { version = "17", features = ["custom-bindings", "derive", "with-file-history"] }
termimad = "0.34"
crossterm = "0.29"
